--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -15,7 +15,8 @@
         "build_lib": "ng build --prod lib",
         "npm_pack": "cd lib/dist && npm pack",
         "package": "npm run build_lib && npm run npm_pack",
-        "link_lib": "cd lib/dist && npm link && cd ../../ && npm link @harbor/ui"
+        "link_lib": "cd lib/dist && npm link && cd ../../ && npm link @harbor/ui",
+        "build_all":"npm run build_lib && npm run link_lib && npm run build"
     },
     "private": true,
     "dependencies": {
@@ -63,7 +64,6 @@
         "enhanced-resolve": "^3.0.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
-        "jquery": "^3.3.1",
         "karma": "~1.7.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-cli": "^1.0.1",
