--- a/make/photon/chartserver/Dockerfile
+++ b/make/photon/chartserver/Dockerfile
@@ -3,10 +3,12 @@ FROM photon:2.0
 RUN tdnf install -y shadow sudo >>/dev/null\
     && tdnf clean all \
     && mkdir /chartserver/ \
+    && mkdir /harbor/ \
     && groupadd -r -g 10000 chartuser \
     && useradd --no-log-init -m -r -g 10000 -u 10000 chartuser
 COPY ./make/photon/chartserver/binary/chartm /chartserver/
 COPY ./make/photon/chartserver/docker-entrypoint.sh /docker-entrypoint.sh
+COPY ./make/photon/common/install_cert.sh /harbor
 
 VOLUME ["/chart_storage"]
 EXPOSE 9999
