--- a/make/photon/registry/Dockerfile
+++ b/make/photon/registry/Dockerfile
@@ -5,7 +5,10 @@ MAINTAINER wangyan@vmware.com
 # The original script in the docker offical registry image.
 RUN tdnf install sudo -y >> /dev/null\
     && tdnf clean all \
-    && groupadd -r -g 10000 harbor && useradd --no-log-init -r -g 10000 -u 10000 harbor
+    && mkdir /harbor/ \
+    && groupadd -r -g 10000 harbor && useradd --no-log-init -r -g 10000 -u 10000 harbor  
+
+COPY  ./make/photon/common/install_cert.sh /harbor 
 
 COPY ./make/photon/registry/entrypoint.sh /
 RUN chmod u+x /entrypoint.sh
