--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -32,18 +32,26 @@
         "@clr/angular": "^0.12.10",
         "@clr/icons": "^0.12.0",
         "@clr/ui": "^0.12.0",
+        "@fortawesome/fontawesome-free": "^5.1.0-4",
+        "@ng-bootstrap/ng-bootstrap": "^2.0.0",
         "@ngx-translate/core": "^10.0.2",
         "@ngx-translate/http-loader": "^3.0.1",
         "@types/jquery": "^2.0.41",
         "@webcomponents/custom-elements": "^1.1.3",
+        "bootstrap": "^4.1.1",
+        "buffer": "^5.2.1",
         "core-js": "^2.5.4",
         "intl": "^1.2.5",
+        "jquery": "^3.3.1",
         "mutationobserver-shim": "^0.3.2",
         "ng-packagr": "^4.1.1",
         "ngx-clipboard": "^11.1.1",
         "ngx-cookie": "^1.0.0",
         "ngx-markdown": "^6.2.0",
+        "popper.js": "^1.14.3",
         "rxjs": "^6.3.1",
+        "stream": "^0.0.2",
+        "swagger-ui": "^3.20.2",
         "ts-helpers": "^1.1.1",
         "tslib": "^1.9.0",
         "types": "^0.1.1",
