--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -42,6 +42,7 @@
     "buffer": "^5.2.1",
     "core-js": "^2.5.4",
     "intl": "^1.2.5",
+    "jasmine-core": "^3.3.0",
     "jquery": "^3.3.1",
     "mutationobserver-shim": "^0.3.2",
     "ng-packagr": "^4.1.1",
@@ -65,18 +66,17 @@
     "@angular/compiler-cli": "^7.1.3",
     "@angular/language-service": "^7.1.3",
     "@types/core-js": "^0.9.41",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^3.3.1",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "enhanced-resolve": "^3.0.0",
-    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha-reporter": "^2.2.4",
     "karma-remap-istanbul": "^0.6.0",
