--- a/make/photon/prepare/Dockerfile
+++ b/make/photon/prepare/Dockerfile
@@ -8,9 +8,9 @@ RUN mkdir -p /harbor_make
 
 RUN tdnf install -y python3 \
     && tdnf install -y python3-pip
-RUN pip3 install pipenv
+RUN pip3 install pipenv==2018.11.26
 
-COPY . /usr/src/app
+COPY make/photon/prepare /usr/src/app
 RUN set -ex && pipenv install --deploy --system
 
 ENTRYPOINT [ "python3", "main.py" ]
