--- a/make/harbor.yml
+++ b/make/harbor.yml
@@ -6,6 +6,7 @@ hostname: reg.mydomain.com
 # core, harbor
 http:
   port: 80
+
 # https:
 #   port: 443
 #   #The path of cert and key files for nginx, they are applied only the protocol is set to https
@@ -103,7 +104,7 @@ jobservice:
 
 # Log configurations
 log:
-  # debug, warn, error
+  # options are debug, info, warn, error
   level: info
   # Log files are rotated log_rotate_count times before being removed. If count is 0, old versions are removed rather than rotated.
   rotate_count: 50
